@startuml
skinparam Shadowing false
skinparam DefaultFontName Arial
skinparam BackgroundColor white
skinparam ArrowColor #4B5563
skinparam ArrowFontSize 9
skinparam nodesep 110
skinparam ranksep 130

top to bottom direction
hide circle
title ERD-05 - Benefits, voucher và loyalty
caption Mô tả dữ liệu voucher, user voucher, loyalty tier, điểm, lịch sử đổi hạng và transaction ledger.
skinparam linetype ortho
skinparam entity {
  BackgroundColor white
  BorderColor #374151
}

entity "vouchers" as vouchers {
  * voucher_id
    free_item_id
    created_by
    updated_by
    code
}

entity "user_vouchers" as user_vouchers {
  * user_voucher_id
    user_id
    voucher_id
    used_reservation_id
    created_by
    updated_by
    used_amount
}

entity "loyalty_tiers" as loyalty_tiers {
  * tier_id
    tier_code
    benefits_json
    tier_name
    min_points
}

entity "user_points" as user_points {
  * user_id
    updated_by
    total_points
    last_updated
    row_version
}

entity "user_tier_history" as user_tier_history {
  * history_id
    user_id
    from_tier_id
    to_tier_id
    created_by
    effective_at
}

entity "loyalty_point_transactions" as loyalty_point_transactions {
  * txn_id
    user_id
    reservation_id
    created_by
    currency
    txn_type
}

entity "users" as users {
  * user_id
    role_id
    current_tier_id
    privacy_anonymized_at
    full_name
}

entity "reservations" as reservations {
  * reservation_id
    status
    deposit_status
    deposit_paid_amount
}

entity "menu_items" as menu_items {
  * item_id
    category_id
    code
    name
}

users |o--o{ user_vouchers : created_by
users |o--o{ user_vouchers : updated_by
reservations |o--o{ user_vouchers : used_reservation_id
users ||--o{ user_vouchers : user_id
vouchers ||--o{ user_vouchers : voucher_id
users |o--o{ loyalty_point_transactions : created_by
reservations |o--o{ loyalty_point_transactions : reservation_id
users ||--o{ loyalty_point_transactions : user_id
loyalty_tiers |o--o{ users : current_tier_id
users |o--o{ user_points : updated_by
users ||--o| user_points : user_id
users |o--o{ vouchers : created_by
menu_items |o--o{ vouchers : free_item_id
users |o--o{ vouchers : updated_by
users |o--o{ user_tier_history : created_by
loyalty_tiers |o--o{ user_tier_history : from_tier_id
loyalty_tiers ||--o{ user_tier_history : to_tier_id
users ||--o{ user_tier_history : user_id

loyalty_tiers -[hidden]right- users
users -[hidden]right- menu_items
menu_items -[hidden]right- user_points

user_tier_history -[hidden]right- vouchers
vouchers -[hidden]right- loyalty_point_transactions

user_vouchers -[hidden]right- reservations

loyalty_tiers -[hidden]down- user_tier_history
users -[hidden]down- vouchers
user_points -[hidden]down- loyalty_point_transactions
vouchers -[hidden]down- user_vouchers
@enduml





